[package]
name = "solana-http-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "*", features = ["full"] }
solana-client = "1.18.26"
solana-sdk = "1.18.26"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.140"
base64 = "0.22.1"
bs58 = "0.5.1"
spl-token = "=4.0.0"
solana-program = "1.18.26"
